cabal-version:      2.4
name:               pap
version:            0.1.0.0
author:             Lars Jellema
maintainer:         lars.jellema@gmail.com

executable pap
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:      -Wall -threaded

    other-modules:
      Lumi.Concurrent.Daemon
      Lumi.Logger

    build-depends:
        base
      , async
